<resources>
    <string name="app_name">banglah</string>
    <string name="arname">أدخل الاسم بالكامل</string>
    <string name="arphone">رقم التلفون</string>
    <string name="arpassword">كلمة السر</string>
    <string name="aremail">إيمال</string>
    <string name="SignIn">تسجيل دخول</string>
    <string name="Signup">إنشاء حساب</string>
    <string name="loremIpsum">"لوريم إيبسوم(Lorem Ipsum) هو ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) ويُستخدم في صناعات المطابع ودور النشر. كان لوريم إيبسوم ولايزال المعيار للنص الشكلي منذ القرن الخامس عشر عندما قامت مطبعة مجهولة برص مجموعة من الأحرف بشكل عشوائي أخذتها من نص، لتكوّن كتيّب بمثابة دليل أو مرجع شكلي لهذه الأحرف. خمسة قرون من الزمن لم تقضي على هذا النص، بل انه حتى صار مستخدماً وبشكله الأصلي في الطباعة والتنضيد الإلكتروني. انتشر بشكل كبير في ستينيّات هذا القرن مع إصدار رقائق \"ليتراسيت\" (Letraset) البلاستيكية تحوي مقاطع من هذا النص، وعاد لينتشر مرة أخرى مؤخراَ مع ظهور برامج النشر الإلكتروني مثل \"ألدوس بايج مايكر\ والتي حوت أيضاً على نسخ من نص لوريم إيبسوم. "</string>
</resources>